--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.4",
     "babel-preset-env": "^1.7.0",
+    "cors": "^2.8.5",
     "css-loader": "^2.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.2",
